# xbmc-pvr-addons

./: configure.ac
addons/: Makefile.am
addons/pvr.demo/addon/: PVRDemoAddonSettings.xml  addon.xml.in
addons/pvr.demo/src/: PVRDemoData.cpp  PVRDemoData.h
addons/pvr.vdr.vnsi/addon/resources/: settings.xml
addons/pvr.vdr.vnsi/src/: VNSIChannelScan.cpp  VNSIChannelScan.h  VNSIData.cpp  VNSIData.h  VNSIDemux.cpp  client.cpp  client.h  vnsicommand.h
lib/: Makefile.am
xbmc/: libXBMC_addon.h  libXBMC_gui.h  libXBMC_service.h  xbmc_content_types.h  xbmc_pvr_types.h
